@@ -6,6 +6,7 @@ man1_MANS = \
 	hp3457.1 \
 	hp3488.1 \
 	hp6632.1 \
+	hp6038.1 \
 	hp8656.1 \
 	hptodino.1 \
 	hptopbm.1 \
@@ -24,6 +25,7 @@ EXTRA_DIST = \
 	hp3457.1 \
 	hp3488.1 \
 	hp6632.1 \
+	hp6038.1 \
 	hp8656.1 \
 	hptodino.1 \
 	hptopbm.1 \
