@@ -110,5 +110,5 @@ from nonvolatile RAM will be used.
 "ICS Electronics MODEL 8065 Ethernet-GPIB Controller Instruction Manual",
 rev 2, March 2007.
 .br
-"ICS Electronics MODEL 7064 Ethernet-Relay Interface Instruction Manual",
+"ICS Electronics MODEL 8064 Ethernet-Relay Interface Instruction Manual",
 rev 0, February 2008.
